<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvAbout"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/author"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvAuthorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTime"
        android:layout_marginBottom="10dp"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/authorEmail"
        android:textSize="16sp" />

    <ImageView
        android:contentDescription="@string/donate"
        android:id="@+id/donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvAuthorEmail" />

</RelativeLayout>