<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GastroidActivity$ContactFragment" >
        
    

    <TableLayout
        android:id="@+id/tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/GASTROM"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/tr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/street"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

        </TableRow>

        <TableRow
            android:id="@+id/tr3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/cityzip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

        </TableRow>

        <TableRow
            android:id="@+id/tr4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:paddingLeft="6dp"
                android:text="@string/gastromphone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

        </TableRow>

        <TableRow
            android:id="@+id/tr5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:paddingLeft="6dp"
                android:text="@string/gastromemail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

        </TableRow>
    </TableLayout>

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_launcher" />

</LinearLayout>
