<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llWidgetV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical"
    android:background="@drawable/layout_border" >

    <LinearLayout
        android:id="@+id/llWidgetH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:src="@drawable/ic_launcher" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp" >

            <TextView
                android:id="@+id/tvGastrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/Gastrom"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvGastrom"
                android:text="@string/day"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="10sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.23"
            android:gravity="right" />

        <ImageView
            android:contentDescription="@string/refresh"
            android:id="@+id/ivRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:src="@drawable/ic_menu_refresh" />

    </LinearLayout>

<ListView
    android:id="@+id/words"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:listSelector="@android:color/transparent" >
        
</ListView>

</LinearLayout>